--- a/html/page.html
+++ b/html/page.html
@@ -1,4 +1,7 @@
-
 <h1> </h1>
-<img src={{.Thumbnail}} height="42" width="42">
-<h4> <a href={{.URL}} target="_blank">{{.Title}}</a></h4>
+{{ range .}}
+    <div>
+    <img src={{.Thumbnail}} height="42" width="42">
+    <h4> <a href={{.URL}} target="_blank">{{.Title}}</a></h4>
+    </div>
+{{end}}
