--- a/html/page.html
+++ b/html/page.html
@@ -2,6 +2,7 @@
 {{ range .}}
     <div>
     <img src={{.Thumbnail}} height="42" width="42">
-    <h4> <a href={{.URL}} target="_blank">{{.Title}}</a></h4>
+    <p> <a href={{.URL}} target="_blank">{{.Title}}</a></p>
     </div>
 {{end}}
+
