backend login now redirects to front-end home

--- a/html/subs.html
+++ b/html/subs.html
@@ -1,5 +1,6 @@
 <h1> </h1>
 {{ range .}}
+    <p>{{.Title}}</p>
     <div>
     <img src={{.Thumbnail}} height="42" width="42">
     <p> <a href={{.URL}} target="_blank">{{.Title}}</a></p>
