--- a/html/videoSearch.html
+++ b/html/videoSearch.html
@@ -2,6 +2,6 @@
 {{ range .}}
     <div>
         <img src={{.Thumbnail}} height="42" width="42">
-        <p> <a href={{.URL}} target="_blank">{{.Title}}</a></p>
+        <p> <a href={{.URL}} target="_blank">{{.Name}}</a></p>
     </div>
 {{end}}
